--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -37,4 +37,52 @@
     .navLinks li a:hover {
         color: rgba(21, 176, 224, 1);
       }
+/*---------- # Home ----------*/
+.pictureColumn {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px;
+  }
+  
+  .picture {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .picture img {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+  }
+  
+  .caption {
+    margin-top: 10px;
+    text-align: center;
+  }
+  
+/*---------- # Footer ----------*/
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #f9f9f9;
+    padding: 20px;
+}
+.gridContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 40px;
+    width: 15%;
+    padding-left: 10%;
+}
+.copyright{
+    text-align: center;
+    font-size: 17px;
+    color: black;
+    padding-right: 35%;
+}
 
