--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -56,9 +56,14 @@
     height: 150px;
     object-fit: cover;
   }
-  
+
   .caption {
-    margin-top: 10px;
+    margin-top: 5px;
+    padding: 15px;
+    text-align: justify;
+  }
+
+  .caption h3 {
     text-align: center;
   }
   
